--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.4",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "m3u8stream": "^0.8.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
